# OP-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ConfigureProject.bat  LICENSE  OPDeps.lua  Opium.sln  OpiumDeps.lua  README.md  premake5.lua
App/: CMakeLists.txt
App/src/: main.cpp
Apps/: CMakeLists.txt
Apps/ExampleOpiumApp/: ExampleOpiumApp.csproj  premake5.lua
Apps/OpiumApp/: CMakeLists.txt  OpiumApp.vcxproj  OpiumProfile_runtime.json  OpiumProfile_shutdown.json  OpiumProfile_startup.json  imgui.ini
Apps/OpiumApp/assets/shaders/: Texture.glsl
Apps/OpiumApp/src/: ParticleSystem.cpp  ParticleSystem.h  TestingGround2D.cpp  TestingGround2D.h  main.cpp
Apps/Opium_Editor/: Opium_Editor.vcxproj  imgui.ini
Apps/RuntimeScripts/: premake5.lua
ConfigureScripts/: CheckVulkan.py  Download.py  Install.bat  Install.py  PyPackagesCheck.py
Engine/: CMakeLists.txt
Engine/include/: Opium.h
Engine/include/Opium/: Application.h  Core.h  EntryPoint.h
Engine/include/OpiumEngine/: engine.h  serviceLocator.h
Engine/include/OpiumEngine/Platform/: window.h
Engine/src/: Opium.h  engine.cpp
Engine/src/Config/: Precomp.cpp
Engine/src/EventSystem/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Gui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Input/: Input.h  KeyCodes.h
Engine/src/Opium/: Application.cpp  Application.h  Core.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logging.cpp  Logging.h
Engine/src/Platform/: glfwWindow.cpp  glfwWindow.h
Engine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Engine/src/Platform/Windows/: WinInput.cpp  WinInput.h  WinWindow.cpp  WinWindow.h
Engine/src/Window/: Window.h
OP/: premake5.lua
OP-Script/: premake5.lua
OP/src/: EntryPoint.h  Op.h
Opium/: CMakeLists.txt  Opium.vcxproj  Opium.vcxproj.filters  premake5.lua
Opium-Script/: Opium-Script.csproj  premake5.lua
Opium-Script/Properties/: AssemblyInfo.cs
Opium/src/: EntryPoint.h  Opium.h
Opium/src/Animation/: Animation.h  Bone.h
Opium/src/Config/: Precomp.h
Opium/src/EventSystem/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Opium/src/Geometry/: Capsule.cpp  Capsule.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Icosphere.cpp  Icosphere.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Quad.cpp  RadialSphere.cpp  RadialSphere.h  Skybox.h
Opium/src/Gui/: ImGuiLayer.cpp  ImGuiLayer.h
Opium/src/Input/: Input.h  KeyCodes.h  MouseButtonCodes.h
Opium/src/Math/: Math.cpp  Math.h
Opium/src/Opium/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logging.cpp  Logging.h  ResourceManager.cpp  ResourceManager.h  Timestep.h  UUID.cpp
Opium/src/PhysicsManager/: PhysicsManager.cpp  PhysicsManager.h
Opium/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Opium/src/Platform/Windows/: WinInput.cpp  WinPlatformUtils.cpp  WinWindow.cpp  WinWindow.h
Opium/src/Profiling/: Instrumentor.h  Timer.h
Opium/src/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  EnvironmentMap.cpp  EnvironmentMap.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Material.cpp  Material.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PingPongRenderPass.cpp  RenderCommand.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderPass.cpp  ShaderPass.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Opium/src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneRenderer.cpp  SceneRenderer.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Opium/src/ScriptManager/: InternalCallArranger.cpp  InternalCallArranger.h  ScriptManager.cpp  ScriptManager.h  Wrappers.cpp  Wrappers.h
Opium/src/Utils/: CSMHelpers.h  FileMonitor.h  PlatformUtils.h  ShaderIncludeUtils.cpp
Opium/src/Window/: Window.h
Tools/OP_Editor/: imgui.ini  premake5.lua
Tools/OP_VulkanSandbox/: premake5.lua
Tools/Opium_Editor/: Opium_Editor.vcxproj  Opium_Editor.vcxproj.filters  imgui.ini  premake5.lua
enc_temp_folder/138ac8493af1608f40f353124853545/: SceneRenderer.cpp
enc_temp_folder/17450af8ed2d981e2f4726bcfc8cc/: SceneRenderer.cpp
enc_temp_folder/181140344d5183d1f428d27dabc06be/: SceneRenderer.cpp
enc_temp_folder/1b5427ba6484479ad7d9f065472a99e4/: SceneRenderer.cpp
enc_temp_folder/282a9f25c481598489799668a4cade/: SceneRenderer.cpp
enc_temp_folder/2c7e6ca2c7616d1958dade5679d4f1/: EditorLayer.cpp
enc_temp_folder/35d928fb97aec744e1251beae312223/: SceneRenderer.cpp
enc_temp_folder/361cda11af45776e23c86d14de575e8/: Mesh.cpp
enc_temp_folder/4067bcbea58c757a5e2e17213716/: SceneRenderer.cpp
enc_temp_folder/42ceb087563f3e5e2119760701a85fd/: SceneRenderer.cpp
enc_temp_folder/431bf565bc65a40aac27083c1cd977d/: SceneRenderer.cpp
enc_temp_folder/4475105f85073efcdd881f454ee5cd/: SceneRenderer.cpp
enc_temp_folder/44d16c25b5a6472610884677e778634/: SceneRenderer.cpp
enc_temp_folder/4ac2478438d964a040f060e17f1dd7bc/: SceneRenderer.cpp
enc_temp_folder/4be56d953fd99caac122839f168d8743/: SceneRenderer.cpp
enc_temp_folder/5312e31e2c5143f9722df9cc866f4d8d/: SceneRenderer.cpp
enc_temp_folder/5b84f9beaa875963fcc1fa3d5ffb/: SceneRenderer.cpp
enc_temp_folder/678d9bad4dfedd8c3ef77c3fa5bf744/: SceneRenderer.cpp
enc_temp_folder/6f97404905afdbeb31c9cf443f0276a/: OpenGLRendererAPI.h
enc_temp_folder/7443fbdf7d77f86a5edb571daccb527e/: SceneRenderer.h
enc_temp_folder/7ad73015b12773bdc87be7db639b8/: RenderCommand.h
enc_temp_folder/90d239ae6395bcc26c1214f1ddafee/: Cube.cpp
(+381 files in other folders)
